Netlify: toggle new F180 UI on preview via VITE_F180

--- a/netlify.toml
+++ b/netlify.toml
@@ -5,3 +5,17 @@ command = "npm ci --include=dev || npm install && npm run build"
 
 [build.environment]
 NODE_VERSION = "20"
+
+# --- NEW: env toggles by context ---
+
+# Production deploys (main)
+[context.production.environment]
+VITE_F180 = "0"   # old UI in prod
+
+# Branch deploys for "preview"
+[context."branch:preview".environment]
+VITE_F180 = "1"   # new UI on the preview branch
+
+# Netlify Deploy Previews (PRs)
+[context.deploy-preview.environment]
+VITE_F180 = "1"   # new UI on PR previews
