--- a/netlify.toml
+++ b/netlify.toml
@@ -1,21 +1,21 @@
 [build]
 base = "webapp"
 publish = "dist"
-command = "npm ci --include=dev || npm install && npm run build"
+command = "npm ci && npm run build"
 
 [build.environment]
-NODE_VERSION = "20"
+NODE_VERSION = "22.18.0"
 
-# --- NEW: env toggles by context ---
+//# --- NEW: env toggles by context ---
 
-# Production deploys (main)
-[context.production.environment]
-VITE_F180 = "0"   # old UI in prod
+//# Production deploys (main)
+//[context.production.environment]
+//VITE_F180 = "0"   # old UI in prod
 
-# Branch deploys for "preview"
-[context."branch:preview".environment]
-VITE_F180 = "1"   # new UI on the preview branch
+//# Branch deploys for "preview"
+//[context."branch:preview".environment]
+//VITE_F180 = "1"   # new UI on the preview branch
 
-# Netlify Deploy Previews (PRs)
-[context.deploy-preview.environment]
-VITE_F180 = "1"   # new UI on PR previews
+//# Netlify Deploy Previews (PRs)
+//[context.deploy-preview.environment]
+//VITE_F180 = "1"   # new UI on PR previews
