--- a/webapp/package.json
+++ b/webapp/package.json
@@ -17,6 +17,7 @@
     "vite": "^7.1.4"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.57.0",
     "lucide-react": "^0.542.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
